--- a/css/styles.css
+++ b/css/styles.css
@@ -2,4 +2,5 @@ body {
     -webkit-user-select: none;
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
+    background-color: skyblue;
  }
