--- a/css/styles.css
+++ b/css/styles.css
@@ -3,4 +3,40 @@ body {
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
     background-color: skyblue;
+    margin: 0px;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont;
+    font-size: 17pt;
+ }
+
+ #nav-bar{     
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: white;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  color: black;
+ }
+
+ #page-content{
+     padding-top: 10px;
+ }
+ #sign-info{ 
+     width: 100%;
+ }
+ #sign-info tr{
+     padding-top: 10px;
+     text-align: center;
+ }
+
+ .quant {
+    font-weight: 700;
+ }
+
+ .time {
+     color: green;
  }
